<resources>
    <string name="app_name">Bay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Clear All Data</string>
    <string name="action_set_fare">Set parking fee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_vehicle">Choose vehicle type</string>
    <string name="already_parked">is already parked.</string>
    <string name="ok">Okay</string>
    <string name="vehicle_not_found">vehicle not found</string>
    <string name="multiple_vehicle">Found muliple vehicle with same registration</string>
    <string name="vehicle_out_confirmation">Are you sure to exit</string>
    <string name="cancel">Cancel</string>
    <string name="set_fare">Set Parking rates</string>
    <string name="text_two_wheeler">Two Wheeler</string>
    <string name="text_four_wheeler">Four Wheeler</string>
    <string name="text_base_fare">Base Fee</string>
    <string name="text_base_hour">Base hour duration</string>
    <string name="text_rate_per_hour">Rate per hour</string>

</resources>
