<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_fare"
        android:textSize="35dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_two_wheeler"
                        android:textSize="30dp" />
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="30dp"
                                    android:layout_marginRight="30dp"
                                    android:orientation="horizontal">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/text_base_fare"
                                        android:layout_weight="5"
                                        android:textSize="20dp" />
                                    <EditText
                                        android:id="@+id/edit_two_wheeler_base_fare"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:inputType="number"
                                        android:maxLength="2" />
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="30dp"
                                    android:layout_marginRight="30dp"
                                    android:orientation="horizontal">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/text_base_hour"
                                        android:layout_weight="5"
                                        android:textSize="20dp" />
                                    <EditText
                                        android:id="@+id/edit_two_wheeler_base_hour"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:inputType="number"
                                        android:layout_weight="1"
                                        android:maxLength="2"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="30dp"
                                    android:layout_marginRight="30dp"
                                    android:orientation="horizontal">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/text_rate_per_hour"
                                        android:layout_weight="5"
                                        android:textSize="20dp" />
                                    <EditText
                                        android:id="@+id/edit_two_wheeler_rate_per_hour"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:inputType="number"
                                        android:layout_weight="1"
                                        android:maxLength="2"/>
                                </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_four_wheeler"
                        android:textSize="30dp" />
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="30dp"
                                        android:layout_marginRight="30dp"
                                        android:orientation="horizontal">
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/text_base_fare"
                                            android:layout_weight="5"
                                            android:textSize="20dp" />
                                        <EditText
                                            android:id="@+id/edit_four_wheeler_base_fare"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:inputType="number"
                                            android:maxLength="2" />
                                    </LinearLayout>
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="30dp"
                                        android:layout_marginRight="30dp"
                                        android:orientation="horizontal">
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/text_base_hour"
                                            android:layout_weight="5"
                                            android:textSize="20dp" />
                                        <EditText
                                            android:id="@+id/edit_four_wheeler_base_hour"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:inputType="number"
                                            android:layout_weight="1"
                                            android:maxLength="2"/>
                                    </LinearLayout>
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="30dp"
                                        android:layout_marginRight="30dp"
                                        android:orientation="horizontal">
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/text_rate_per_hour"
                                            android:layout_weight="5"
                                            android:textSize="20dp" />
                                        <EditText
                                            android:id="@+id/edit_four_wheeler_rate_per_hour"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:inputType="number"
                                            android:layout_weight="1"
                                            android:maxLength="2"/>
                                    </LinearLayout>
    <Button
        android:id="@+id/button_reset_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Reset" />
    <Button
        android:id="@+id/button_set_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Done" />
</LinearLayout>